updated duo ... fixed spacing of footer and size of contact us grid item at 480px viewport

--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ nav a:hover {
   color: white;
   max-width: 1000px;
   margin: 0 auto;
-  padding: 0 50px;
+  /*padding: 0 50px;*/
   text-align: left;
   line-height: 1.5;
   border-radius: 25px;
@@ -502,7 +502,7 @@ nav a:hover {
 
 footer {
   text-align: center;
-  margin-top: 50px;
+  margin-top: 25px;
   color: black;
 }
 
